--- a/ui-bundles/pom.xml
+++ b/ui-bundles/pom.xml
@@ -53,6 +53,7 @@
         <module>widgets/entando-widget-3-step-mortgage</module>
         <module>content-types/entando-content-generic</module>
         <module>widgets/entando-widget-language_choose</module>
+        <module>widgets/banner-main-page</module>
         <!-- <module>widgets/entando-widget-navigation_bar</module>
         <module>widgets/entando-widget-navigation_menu</module>
         <module>widgets/entando-widget-navigation_breadcrumbs</module>
@@ -71,7 +72,7 @@
         <module>app-views/entando-app-view-rss-default</module>
         <module>app-views/entando-app-view-facetnav-default</module>
         <module>app-views/entando-app-view-userreg-default</module>-->
-        
+
         <!-- <module>app-views/entando-app-view-addressbook-default</module> -->
         <!--        <module>app-views/entando-app-view-calendar-default</module>
         <module>app-views/entando-app-view-survey-default</module>
