--- a/ui-bundles/pom.xml
+++ b/ui-bundles/pom.xml
@@ -50,10 +50,15 @@
         <module>widgets/entando-widget-search_result_inspinia</module>
         <module>misc/entando-misc-light</module>
         <module>themes/entando-page-light</module>
+        <module>themes/entando-page-purple</module>
         <module>widgets/entando-widget-3-step-mortgage</module>
         <module>content-types/entando-content-generic</module>
         <module>widgets/entando-widget-language_choose</module>
         <module>widgets/banner-main-page</module>
+        <module>widgets/banner-advisors</module>
+        <module>widgets/left_columns_mortgage</module>
+        <module>widgets/right_columns_help</module>
+
         <!-- <module>widgets/entando-widget-navigation_bar</module>
         <module>widgets/entando-widget-navigation_menu</module>
         <module>widgets/entando-widget-navigation_breadcrumbs</module>
