--- a/ui-bundles/pom.xml
+++ b/ui-bundles/pom.xml
@@ -58,6 +58,7 @@
         <module>widgets/entando-inspinia-meter-left-page</module>
         <module>widgets/entando-inspinia-meter-center-page</module>
         <module>widgets/entando-inspinia-meter-right-page</module>
+        <module>widgets/meeting_list</module>
         <!--
         <module>misc/entando-misc-light</module>
         <module>themes/entando-page-light</module>
