--- a/ui-bundles/themes/entando-page-inspinia/pom.xml
+++ b/ui-bundles/themes/entando-page-inspinia/pom.xml
@@ -68,7 +68,6 @@
             <version>4.3.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
-
         <dependency>
             <groupId>org.entando.entando.bundles.widgets</groupId>
             <artifactId>entando-widget-language_choose_inspinia</artifactId>
@@ -90,6 +89,12 @@
         <dependency>
             <groupId>org.entando.entando.bundles.widgets</groupId>
             <artifactId>entando-inspinia-meter-right-page</artifactId>
+            <version>4.3.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.entando.entando.bundles.widgets</groupId>
+            <artifactId>meeting_list</artifactId>
             <version>4.3.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
