--- a/ui-bundles/themes/entando-page-inspinia/pom.xml
+++ b/ui-bundles/themes/entando-page-inspinia/pom.xml
@@ -95,6 +95,12 @@
         </dependency>
         <dependency>
             <groupId>org.entando.entando.bundles.widgets</groupId>
+            <artifactId>entando-widget-data_report_tweets</artifactId>
+            <version>4.3.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.entando.entando.bundles.widgets</groupId>
             <artifactId>entando-widget-search_form_inspinia</artifactId>
             <version>4.3.2-SNAPSHOT</version>
             <type>war</type>
