--- a/ui-bundles/pom.xml
+++ b/ui-bundles/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -58,12 +58,16 @@
         <module>widgets/entando-inspinia-meter-left-page</module>
         <module>widgets/entando-inspinia-meter-center-page</module>
         <module>widgets/entando-inspinia-meter-right-page</module>
-        <module>widgets/meeting_list</module>
+        <module>widgets/entando-widget-meeting_list-purple</module>
         <module>widgets/entando-widget-data_report_tweets</module>
+        <module>widgets/entando-widget-banner_avarage_light</module>
+        <module>widgets/entando-widget-banner_main_page_light</module>
+        <module>widgets/entando-widget-security_banner_light</module>
         <module>misc/entando-misc-light</module>
         <module>themes/entando-page-light</module>
-        <!--
         <module>themes/entando-page-purple</module>
+		<!--
+        
         <module>app-views/entando-app-view-addressbook-default</module>
         <module>widgets/entando-widget-navigation_bar</module>
         <module>widgets/entando-widget-navigation_menu</module>
