--- a/ui-bundles/pom.xml
+++ b/ui-bundles/pom.xml
@@ -51,7 +51,7 @@
         <module>widgets/entando-widget-3-steps-mortgage-light</module>
         <module>content-types/entando-content-generic</module>
         <module>widgets/entando-widget-language_choose</module>
-        <module>widgets/entando-widget-banner-main-page</module>
+        <!--<module>widgets/entando-widget-banner-main-page</module>-->
         <module>widgets/entando-widget-banner-advisors</module>
         <module>widgets/entando-widget-left_columns_mortgage</module>
         <module>widgets/entando-widget-right_col_help_purple</module>
