--- a/ui-bundles/themes/entando-page-light/pom.xml
+++ b/ui-bundles/themes/entando-page-light/pom.xml
@@ -89,7 +89,13 @@
         </dependency>
         <dependency>
             <groupId>org.entando.entando.bundles.widgets</groupId>
-            <artifactId>entando-widget-banner-main-page-light</artifactId>
+            <artifactId>entando-widget-banner_main_page_light</artifactId>
+            <version>4.3.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.entando.entando.bundles.widgets</groupId>
+            <artifactId>entando-widget-banner-main-page</artifactId>
             <version>4.3.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
