--- a/ui-bundles/themes/entando-page-light/pom.xml
+++ b/ui-bundles/themes/entando-page-light/pom.xml
@@ -123,5 +123,11 @@
             <version>4.3.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>org.entando.entando.bundles.widgets</groupId>
+            <artifactId>entando-widget-lender-login</artifactId>
+            <version>4.3.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
     </dependencies>
 </project>
